[gd_scene load_steps=13 format=3 uid="uid://dbpb17mi6121k"]

[ext_resource type="Script" uid="uid://m0orkt4o1mv" path="res://inicio/scripts/inicio.gd" id="1_1gddd"]
[ext_resource type="Texture2D" uid="uid://dxrwauthv1m1j" path="res://inicio/image/FONDO1.png" id="1_02dlf"]
[ext_resource type="Texture2D" uid="uid://cxty42ago4c0c" path="res://inicio/buttons/button.tres" id="2_02dlf"]
[ext_resource type="Texture2D" uid="uid://qhc5c5va7xqh" path="res://inicio/buttons/buttonPress.tres" id="3_0nqds"]
[ext_resource type="Texture2D" uid="uid://bcmbxpsbvia53" path="res://inicio/buttons/buttonS.tres" id="4_vjlsw"]
[ext_resource type="FontFile" uid="uid://b5lt21bsvyn6v" path="res://assets/Fonts/Pixeled.ttf" id="5_02dlf"]
[ext_resource type="Texture2D" uid="uid://wy5nme2tt1vd" path="res://inicio/buttons/exitButton.tres" id="6_0nqds"]
[ext_resource type="Texture2D" uid="uid://d4ni14x8nl2n" path="res://inicio/buttons/musicaButton.tres" id="6_m12qu"]
[ext_resource type="Script" uid="uid://d4jgkqfp5ly5q" path="res://inicio/scripts/musica_button.gd" id="10_44otc"]
[ext_resource type="Texture2D" uid="uid://i6xux8ncq63h" path="res://inicio/buttons/exitButtonPress.tres" id="10_cprgw"]
[ext_resource type="Script" uid="uid://b7xkn24k7fi6v" path="res://inicio/scripts/exit_button.gd" id="11_1gddd"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ac0f8"]
texture = ExtResource("1_02dlf")

[node name="Inicio" type="Node2D"]
script = ExtResource("1_1gddd")

[node name="Panel" type="Panel" parent="."]
offset_right = 1151.0
offset_bottom = 644.0
theme_override_styles/panel = SubResource("StyleBoxTexture_ac0f8")

[node name="startButton" type="TextureButton" parent="."]
offset_left = 416.0
offset_top = 296.0
offset_right = 474.0
offset_bottom = 316.0
scale = Vector2(4.2, 4.2)
texture_normal = ExtResource("2_02dlf")
texture_pressed = ExtResource("3_0nqds")
texture_hover = ExtResource("4_vjlsw")

[node name="guideButton" type="TextureButton" parent="."]
offset_left = 416.0
offset_top = 392.0
offset_right = 476.0
offset_bottom = 418.0
scale = Vector2(4.2, 4.2)
texture_normal = ExtResource("2_02dlf")
texture_pressed = ExtResource("3_0nqds")
texture_hover = ExtResource("4_vjlsw")

[node name="loreButton" type="TextureButton" parent="."]
offset_left = 416.0
offset_top = 488.0
offset_right = 476.0
offset_bottom = 514.0
scale = Vector2(4.2, 4.2)
texture_normal = ExtResource("2_02dlf")
texture_pressed = ExtResource("3_0nqds")
texture_hover = ExtResource("4_vjlsw")

[node name="Label" type="Label" parent="."]
offset_left = 464.0
offset_top = 289.0
offset_right = 645.0
offset_bottom = 410.0
theme_override_colors/font_color = Color(0.109364, 0.087002, 0.0150032, 1)
theme_override_fonts/font = ExtResource("5_02dlf")
theme_override_font_sizes/font_size = 30
text = "START"

[node name="Label" type="Label" parent="Label"]
layout_mode = 0
offset_left = 5.0
offset_top = 94.0
offset_right = 186.0
offset_bottom = 215.0
theme_override_colors/font_color = Color(0.109364, 0.087002, 0.0150032, 1)
theme_override_fonts/font = ExtResource("5_02dlf")
theme_override_font_sizes/font_size = 30
text = "GUIDE"

[node name="Label" type="Label" parent="Label/Label"]
layout_mode = 0
offset_left = 8.0
offset_top = 98.0
offset_right = 189.0
offset_bottom = 219.0
theme_override_colors/font_color = Color(0.109364, 0.087002, 0.0150032, 1)
theme_override_fonts/font = ExtResource("5_02dlf")
theme_override_font_sizes/font_size = 30
text = "LORE"

[node name="musicaButton" type="TextureButton" parent="."]
offset_left = 1088.0
offset_top = 8.0
offset_right = 1105.0
offset_bottom = 25.0
scale = Vector2(3.2, 3.2)
texture_normal = ExtResource("6_m12qu")
script = ExtResource("10_44otc")

[node name="exitButton" type="TextureButton" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 25.0
offset_bottom = 25.0
scale = Vector2(3.2, 3.2)
texture_normal = ExtResource("6_0nqds")
texture_pressed = ExtResource("6_0nqds")
texture_hover = ExtResource("10_cprgw")
script = ExtResource("11_1gddd")

[connection signal="pressed" from="startButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="guideButton" to="." method="_on_guide_button_pressed"]
[connection signal="pressed" from="loreButton" to="." method="_on_lore_button_pressed"]
[connection signal="pressed" from="musicaButton" to="musicaButton" method="_on_pressed"]
[connection signal="pressed" from="exitButton" to="exitButton" method="_on_pressed"]
